# corrgated-wind-optimization

./: README.md  env.py  pyproject.toml  shape.py  test.py  train.py
results/: best_shape.json
