[project]
name = "corrugated-wing-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gym>=0.26.2",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "scipy>=1.15.3",
    "shimmy>=2.0.0",
    "stable-baselines3>=2.6.0",
]

# =========================================================
# Ruff
# =========================================================
[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint]
select = [
    "I",    # flake8-import-conventions
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "BLE",  # flake8-blind-except
    "C4",   # flake8-comprehensions
    "C90",  # mccabe
    "COM",  # flake8-commas
    "DTZ",  # flake8-datetimez
    "E",    # pycodestyle
    "EM",   # flake8-errmsg
    "ERA",  # eradicate
    "EXE",  # flake8-executable
    "F",    # Pyflakes
    "FBT",  # flake8-boolean-trap
    "G",    # flake8-logging-format
    "INP",  # flake8-no-pep420
    "ISC",  # flake8-implicit-str-concat
    "N",    # pep8-naming
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    "PL",   # pylint
    "PT",   # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # ruff-specific rules
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "TC004",# flake8-type-checking
    "TID",  # flake8-tidy-imports
    "UP",   # pyupgrade
    "W",    # pycodestyle
]
ignore = [
    "FBT001",   # Boolean-typed positional argument in function definition
    "FBT002",   # Boolean default positional argument in function definition
    "ANN002",   # Missing type annotation for *args
    "ANN003",   # Missing type annotation for **kwargs
    "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed
    "EXE002",   # The file is executable but no shebang is present
    "COM812", "ISC001",  # Conflicts with the formatter
    "DTZ001",  # `datetime.datetime()` called without a `tzinfo` argument
    "DTZ007",  # Naive datetime constructed using `datetime.datetime.strptime()` without %z
    "UP007",   # Use `X | Y` for type annotations　(for kfp v2)
]
extend-select = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/{test_*.py,tests.py}" = [
    "ANN001",   # Missing type annotation for function argument
    "ANN201",   # Missing return type annotation
    "FBT001",   # Boolean-typed positional argument
    "FBT002",   # Boolean default positional argument in function definition"
    "PGH004",   # Use specific rule codes when using `noqa`
    "PLR0913",  # Too many arguments to function call
    "PLR2004",  # Magic value used in comparison
    "RUF012",   # Mutable class attributes should be annotated with `typing.ClassVar`
    "S101",     # Use of assert detected
    "S105",     # Possible hardcoded password
    "S106",     # Possible hardcoded password
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]
